# DartBinEditor

./: DESIGN.md  PROMPT.md  README.md  dev.bat  dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
examples/markdown-syntax-showcase/: README.md
examples/project-docs/: README.md
examples/project-docs/api/: commands.md
examples/project-docs/guide/: getting-started.md
plan/: PRD-v1.md
public/: icon-preview.html
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  fs.rs  mod.rs  search.rs  syntax.rs
src-tauri/src/search/: mod.rs
src-tauri/src/syntax/: mod.rs
src/components/: ErrorBoundary.tsx
src/components/editor/: CodeBlockComponent.tsx  CodeBlockExtension.ts  CodeMirrorEditor.css  CodeMirrorEditor.tsx  EditorToolbar.tsx  FloatingSearch.tsx  MilkdownEditor.tsx  MonacoEditor.css  MonacoEditor.tsx  NovelEditor.tsx  ResizableDivider.tsx  SimpleMarkdownEditor.tsx  TabBar.tsx  TipTapEditor.tsx  WikiLinkExtension.ts
src/components/panels/: CommandPalette.tsx
src/components/sidebar/: FileTree.tsx  OutlinePanel.tsx  SearchPanel.tsx  TagPanel.tsx
src/components/ui/: AboutDialog.tsx  toggle.tsx
src/hooks/: useFileAutoSave.ts  useMathRenderer.ts  useMermaidRenderer.ts
src/stores/: editor.ts
