[package]
name = "dart-bin-editor"
version = "0.1.0"
description = "DartBinEditor - AI-native text editor"
authors = ["you"]
edition = "2021"

[lib]
name = "dart_bin_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tantivy = "0.22"

